--- a/Backend/package.json
+++ b/Backend/package.json
@@ -8,10 +8,15 @@
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
+    "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.32",
     "types": "^0.1.1",
@@ -19,6 +24,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
+    "@types/jsonwebtoken": "^8.5.1",
     "@types/morgan": "^1.9.2",
     "eslint": "6.8.0",
     "ts-node-dev": "^1.1.6"
